--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1496,6 +1496,15 @@ Icon for all respective meta
 .copyright p {
     margin: 0;
 }
+.profile-img{
+    text-align: center;
+}
+.profile-img img{
+    width: 60%;
+    margin: 0 auto;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
 
 
 
